--- a/嵌入式（三）.md
+++ b/嵌入式（三）.md
@@ -6,3 +6,74 @@
 
 为了培养前瞻性思维，洞悉事物发展规律，并培养我们预测事物发展方向的能力。
 
+* 学习大师的思维方式
+* 学习蕴含在知识体系中的思维模式
+* 学习从不同的角度看问题
+* 学习用统一的观点看问题
+* 学习构建自己的知识体系
+
+
+
+抽象：接口和实现相分离
+
+模型：用统一的观点看问题
+
+
+
+## 二、一些学习的建议
+
+刚开始学习的时候都是从底向上的，这个过程是很快的，主要是不求甚解，大致地过一遍。过完一遍后构建自己的知识体系，然后开始细节地学习。
+
+
+
+## 三、各种抽象
+
+1. <b>控制器</b>
+   * `PC`
+   * `IR`
+   * `Finite State Machine`
+
+2. <b>运算器</b>
+   * `ALU`
+   * `Rigster File`
+
+3. <b>操作系统的抽象</b>
+   * `Physical Device`
+   * `Logical Device`
+   * `Scheduler`
+   * `Virtual Device`
+   * `API`
+
+4. <b>计网的抽象</b>（和OS的抽象结合起来）
+   * `Pysical Layer`
+   * `Data Link Layer`
+   * `Network Layer`
+   * `Transport Layer`：传输层有缓冲区，给我们感觉是数据走了，类似于OS的虚拟设备
+   * `Sessioon Layer`
+   * `Presentation Layer`
+   * `Application Layer`
+   
+   
+
+## 四、通信模型
+
+![image-20220325213451972](https://raw.githubusercontent.com/zrmin/BlogImages/master/images/202203252134142.png)
+
+通信模型的推广：
+
+1. `IPC` 进程间通信
+2. 函数调用
+3. `client_server`间的通信
+4. `CPU`和内存
+
+这个通信模型是我印象最深的，因为我最近正在学习使用`Websocket`实现前后端通信。在我编写的项目中，`protocol`就是`wss`，`channel`就是`django-channel`，`sender`是前端的窗口，`channel`中传送的是前端窗口中对象的动作，`receiver`是个中心服务器。
+
+
+
+## 五、芯片
+
+1. 数字芯片：用来产生、放大和处理各种数字信号
+2. `CPU`：执行通用运算
+3. `GPU`：图形和图像处理
+4. `ASIC`：专用集成电路，应特定用户的要求和特定电子系统的需要而设计、制造
+5. 军工级芯片：由于面临复杂的战争环境，所以其电子器件最实用、最耐操
