add 4th part in chapter5

--- a/嵌入式（五）.md
+++ b/嵌入式（五）.md
@@ -121,6 +121,10 @@ ADD R0, R0, R3 #  R0 = R0 + R3
 
 ![image-20220329181237303](https://raw.githubusercontent.com/zrmin/BlogImages/master/images/202203291812439.png)
 
+
+
+## 四、汇编基础
+
 ```assembly
 ;armex.s文件 后缀名.s，表示是汇编语言写的，LC3汇编的后缀名是.asm
         AREA ARMex, CODE, READONLY  ; name this block of code定义一个代码块，只读，名字：ARMex
@@ -168,5 +172,9 @@ DCW ; 空间都是2个字节-半字
 CMP r2, #0 ; 判断r2中保存的是不是0，并设置标志位
 
 MOV pc, lr ; return 在函数调用时，会将返回地址存到lr中
+```
+
+```assembly
+EXPORT ; 此函数为外部函数调用
 ```
 
