--- a/嵌入式（六）.md
+++ b/嵌入式（六）.md
@@ -24,3 +24,31 @@
 
 
 
+## 四、C语言中内嵌汇编
+
+1. 不能直接向PC寄存器赋值，程序跳转要使用B或者BL指令
+
+2. 在使用物理寄存器时，不要使用过于复杂的C表达式，避免物理寄存器冲突
+
+3. R12和R13可能被编译器用来存放中间编译结果，计算表达式值时可能将R0到R3、R12及R14用于子程序调用，因此要避免直接使用这些物理寄存器
+
+4. 一般不要直接指定物理寄存器，而让编译器进行分配
+
+   
+
+## 五、在汇编语言中使用C语言中定义的全局变量
+
+使用内联汇编不需要单独编译编译汇编文件使用起来非常方便，但是使用内联汇编有诸多的限制，当汇编文件较多的时候就需要使用专门的汇编文件编写汇编程序，在C语言和汇编语言进行数据传递的最简单的形式就是使用，全局变量。
+
+
+
+## 六、在C中调用汇编语言函数
+
+在C中调用汇编语言函数，需要做的工作主要有两个，一个就是在C语言中声明函数原型，并加extern 关键字，二是在汇编语言中使用EXPORT导出函数，并使用该函数名作为汇编段的标志，最后使用mov pc ,lr 返回，然后就可以在C语言中调用该函数了，从C的角度并不知道该函数实现是C还是汇编，因为C语言的函数名也起到标示函数起始地址这一点和汇编的作用是一样的。
+
+
+
+## 七、在汇编语言中调用C函数
+
+在汇编语言中调用C函数，需要在汇编语言中IMPORT对应的C语言函数名。
+
