--- a/嵌入式（十一）.md
+++ b/嵌入式（十一）.md
@@ -44,6 +44,9 @@
      * -c (compress)压缩
      * -x （extract)解压缩
      * -f 指定文件名
+     * -v 显示执行过程
+     * -z gzip .gz
+     * -j bzip .bz2
    * rpm 安装
      * -i(install)
      * -v(view)
@@ -54,5 +57,5 @@
 5. 文件系统操作
    * mount
    * unmount
-   * df (display fdisk)
-   * du (display usage)
+   * df (disk free)
+   * du (disk usage)
