--- a/嵌入式（十二）.md
+++ b/嵌入式（十二）.md
@@ -4,7 +4,6 @@
 
 1. adduser
    * adduser -g指定用户组 -m 指定目录
-   * 
 2. deluser
 3. passwd
 4. su：switch user
@@ -23,7 +22,9 @@
 
 ## 三、网络操作
 
-1. ifconfig：interface config
+1. ifconfig：interface config直接修改，立即发挥作用
+   * /etc/network/interfaces 配置文件
+   * service networking restart修改配置文件后要重新启动服务后才起作用
 2. ping
 3. service
    * stop
